// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCardGroup > renders correctly with a children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              />
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with description 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                title
              </h3>
            </div>
            <p
              class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9owk uv_m4c9ow1a uv_m4c9ow32"
            >
              description
            </p>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with different title and subtitle and with custom titleAs and subtitleAs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h2
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
              >
                subtitle
              </h2>
              <h1
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                title
              </h1>
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with link target _parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_parent"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with loading prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <div
        class="uv_13h8ak95"
      >
        <div
          class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="uv_c2hb451"
            >
              <div
                class="uv_fr4c0td"
                style="--uv_fr4c0t1: 7.5rem;"
              />
              <div
                class="uv_c2hb452"
              />
            </div>
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_13h8ak96 uv_c2hb451"
          >
            <div
              class="uv_fr4c0tk"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with required title & hread 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCardGroup > renders correctly with subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="uv_13h8ak94 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
    >
      <a
        class="uv_13h8ak91"
        href="http://scaleway.com"
        target="_blank"
      >
        <div
          class="uv_13h8ak93 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u77"
        >
          <div
            class="uv_13h8ak90 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          >
            <div>
              <h5
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
              >
                subtitle
              </h5>
              <h3
                class="uv_m4c9ow0 uv_m4c9ow3 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                title
              </h3>
            </div>
          </div>
          <div
            class="uv_13h8ak92"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                OpenInNewIcon
              </title>
              <path
                d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
              />
              <path
                d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
